--- a/app/ingest.css
+++ b/app/ingest.css
@@ -76,13 +76,13 @@ hr {
 	font-family: 'Merriweather';
 	font-style: normal;
 	font-weight: 400;
-	src: url("fonts/merriweather-v19-latin-regular.eot");
-	src: local("Merriweather Regular"), local("Merriweather-Regular"), url("fonts/merriweather-v19-latin-regular.eot?#iefix") format("embedded-opentype"), url("fonts/merriweather-v19-latin-regular.woff2") format("woff2"), url("fonts/merriweather-v19-latin-regular.woff") format("woff"), url("fonts/merriweather-v19-latin-regular.ttf") format("truetype"), url("fonts/merriweather-v19-latin-regular.svg#Merriweather") format("svg")
+	src: url("./fonts/merriweather-v19-latin-regular.eot");
+	src: local("Merriweather Regular"), local("Merriweather-Regular"), url("./fonts/merriweather-v19-latin-regular.eot?#iefix") format("embedded-opentype"), url("./fonts/merriweather-v19-latin-regular.woff2") format("woff2"), url("./fonts/merriweather-v19-latin-regular.woff") format("woff"), url("./fonts/merriweather-v19-latin-regular.ttf") format("truetype"), url("./fonts/merriweather-v19-latin-regular.svg#Merriweather") format("svg")
 }
 @font-face {
 	font-family: 'Merriweather';
 	font-style: normal;
 	font-weight: 700;
-	src: url("fonts/merriweather-v19-latin-700.eot");
-	src: local("Merriweather Bold"), local("Merriweather-Bold"), url("fonts/merriweather-v19-latin-700.eot?#iefix") format("embedded-opentype"), url("fonts/merriweather-v19-latin-700.woff2") format("woff2"), url("fonts/merriweather-v19-latin-700.woff") format("woff"), url("fonts/merriweather-v19-latin-700.ttf") format("truetype"), url("fonts/merriweather-v19-latin-700.svg#Merriweather") format("svg")
+	src: url("./fonts/merriweather-v19-latin-700.eot");
+	src: local("Merriweather Bold"), local("Merriweather-Bold"), url("./fonts/merriweather-v19-latin-700.eot?#iefix") format("embedded-opentype"), url("./fonts/merriweather-v19-latin-700.woff2") format("woff2"), url("./fonts/merriweather-v19-latin-700.woff") format("woff"), url("./fonts/merriweather-v19-latin-700.ttf") format("truetype"), url("./fonts/merriweather-v19-latin-700.svg#Merriweather") format("svg")
 }
