GUI der «KOST Referenzimplementierung» an das Look and Feel des CMS angepasst

--- a/app/ingest.css
+++ b/app/ingest.css
@@ -1,55 +1,4 @@
 /* CSS Document */
-label {
-  background-color: indigo;
-  color: white;
-  padding: 0.5rem;
-  font-family: sans-serif;
-  border-radius: 0.3rem;
-  cursor: pointer;
-  margin-top: 1rem;
-}
-
-#file-chosen{
-  margin-left: 0.3rem;
-  font-family: sans-serif;
-}
-/* CSS Document */
-
-.upload-btn-wrapper {
-  position: relative;
- 
-  display: inline-block;
-}
-
-.btn2 {
-	font-family: "Segoe UI", Verdana, Helvetica, Arial, sans-serif;
-	font-size: 1rem;
-	font-weight: 600;
-	text-align: center;
-	vertical-align: middle;
-	display: inline-block;
-	color: #333;
-	background-color: #fff78f;
-	border: 1px solid transparent;
-	padding: .375rem .75rem;
-	border-color: #fff78f;
-	border-radius: .65rem;
-	cursor: pointer;
-	user-select: none;
-	transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-
-}
-
-.upload-btn-wrapper input[type=file] {
-  font-size: 100%;
-  position: absolute;
-  left: 0;
-  top: 0;
-  opacity: 0;
-}
-
-
-/* CSS Document */
 body {
 	max-width: 950px;
 	margin: auto;
@@ -140,6 +89,7 @@ hr {
 	background-color: #4a4a4a;
 	border-color: #4a4a4a;
 }
+/* Buttons */
 .btn {
 	font-family: "Segoe UI", Verdana, Helvetica, Arial, sans-serif;
 	font-size: 1rem;
@@ -155,11 +105,36 @@ hr {
 	border-radius: .65rem;
 	cursor: pointer;
 	user-select: none;
-	transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 .btn:hover {
 	background-color: #faeb61;
+	border: 1px solid transparent;
+	border-color: #fff78f;
 }
+*:focus {
+	outline: none;
+}
+#file-chosen {
+	margin-left: 0.3rem;
+	margin-right: 0.3rem;
+	vertical-align: -10%;
+	font-family: "Segoe UI", Verdana, Helvetica, Arial, sans-serif;
+	font-size: 1rem;
+	font-weight: 400;
+}
+/* Input Field */
+.form-control {
+	font-size: 1rem;
+	color: #495057;
+	padding: .375rem .75rem;
+	background-color: #fff;
+	border: 1px solid #ced4da;
+	border-radius: .25rem;
+}
+.form-control:focus {
+	border-color: #faeb61;
+}
+/* local Fonts */
 @font-face {
 	font-family: 'Merriweather';
 	font-style: normal;
